import logging
import re
from typing import Optional, Dict, Any
from fastapi import Request, HTTPException
from fastapi.responses import JSONResponse
from starlette.middleware.base import BaseHTTPMiddleware

logger = logging.getLogger(__name__)

class AuthMiddleware(BaseHTTPMiddleware):
    def __init__(self, app):
        super().__init__(app)
        
        # Exact path matching (from proven Phase 2 implementation)
        self.public_paths = {
            "/healthz",
            "/health", 
            "/docs",
            "/openapi.json",
            "/redoc",
            "/api/auth/health"
        }
        
        self.protected_paths = {
            "/chat/",
            "/chat",
            "/api/setup/",
            "/api/test/", 
            "/api/auth/sessions",
            "/api/auth/logout",
            "/api/auth/logout-all",
            "/onboarding/faq"  # Setup mode endpoint
        }

    def _is_tenant_chat_path(self, path: str) -> bool:
        """Check if path matches tenant chat pattern: /tenant/{slug}/chat"""
        pattern = r'^/tenant/[^/]+/chat/?$'
        return bool(re.match(pattern, path))

    def _is_public_path(self, path: str) -> bool:
        """Check exact public paths"""
        return path in self.public_paths

    def _is_protected_path(self, path: str) -> bool:
        """Check exact protected paths"""
        return path in self.protected_paths

    async def dispatch(self, request: Request, call_next):
        path = request.url.path
        
        # Root path - allow through
        if path == "/":
            return await call_next(request)
            
        logger.info(f"ðŸ”§ Middleware processing", path=path)
        
        # Check tenant chat patterns FIRST (customer mode - public)
        if self._is_tenant_chat_path(path):
            logger.info(f"ðŸ¢ Tenant chat path - bypassing auth", path=path)
            response = await call_next(request)
            return response
            
        # Check explicit public paths
        elif self._is_public_path(path):
            logger.info(f"ðŸ“‚ Public path - bypassing auth", path=path)
            response = await call_next(request)
            return response
            
        # Check explicit protected paths
        elif self._is_protected_path(path):
            logger.info(f"ðŸ”’ Protected path - auth required", path=path)
            return await self._handle_protected_request(request, call_next)
            
        # Unknown paths default to protected
        else:
            logger.warning(f"âš ï¸ Unknown path - defaulting to protected", path=path)
            return await self._handle_protected_request(request, call_next)

    async def _handle_protected_request(self, request: Request, call_next):
        """Handle authentication for protected endpoints"""
        auth_header = request.headers.get("Authorization")
        
        if not auth_header:
            return JSONResponse(
                status_code=401,
                content={
                    "error": "Authentication required",
                    "code": "MISSING_TOKEN",
                    "message": "This endpoint requires authentication."
                }
            )
            
        if not auth_header.startswith("Bearer "):
            return JSONResponse(
                status_code=401,
                content={
                    "error": "Invalid authentication format", 
                    "code": "INVALID_TOKEN_FORMAT",
                    "message": "Use Bearer token format."
                }
            )
            
        token = auth_header[7:]  # Remove "Bearer " prefix
        
        # Mock authentication (from Phase 2 proven implementation)
        user_context = await self._validate_token(token)
        if not user_context:
            return JSONResponse(
                status_code=401,
                content={
                    "error": "Invalid token",
                    "code": "INVALID_TOKEN", 
                    "message": "Authentication failed."
                }
            )
            
        # Inject user context into request
        request.state.user = user_context
        logger.info(f"âœ… Authentication successful", user_id=user_context.get("user_id"))
        
        response = await call_next(request)
        return response

    async def _validate_token(self, token: str) -> Optional[Dict[str, Any]]:
        """Mock token validation - fallback when gRPC unavailable"""
        logger.info("ðŸŽ­ Using mock auth validation", token_prefix=token[:8])
        return {
            "user_id": "mock_user_authenticated",
            "tenant_id": "mock_tenant", 
            "username": f"user_with_token_{token[:8]}"
        }
